--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,17 +4,38 @@
     package="com.adhafajri.githubuserapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <permission android:name="com.adhafajri.githubuserapp.READ_DATABASE" android:protectionLevel="normal"/>
+    <permission android:name="com.adhafajri.githubuserapp.WRITE_DATABASE" android:protectionLevel="normal"/>
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:logo="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         tools:targetApi="m">
+        <provider
+            android:name=".providers.UserProvider"
+            android:authorities="com.adhafajri.githubuserapp"
+            android:enabled="true"
+            android:exported="true"
+            android:readPermission="com.adhafajri.githubuserapp.READ_DATABASE"
+            android:writePermission="com.adhafajri.githubuserapp.WRITE_DATABASE"/>
+
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:configChanges="locale" />
+
+        <receiver
+            android:name=".receivers.AlarmReceiver"
+            android:enabled="true"
+            android:exported="true" />
 
         <activity
             android:name=".activities.MainActivity"
@@ -25,18 +46,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.FavoriteActivity">
-            <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".activities.MainActivity" />
-        </activity>
-        <activity
-            android:name=".activities.DetailActivity"
-            android:parentActivityName=".activities.MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.MainActivity" />
-        </activity>
+        <activity android:name=".activities.FavoriteActivity" />
+        <activity android:name=".activities.DetailActivity" />
     </application>
 
 </manifest>
